# RedRaft

./: .gitmessage  CODE_REVIEW_network.md  CODE_REVIEW_pb.md  CONTRIBUTING.md  Cargo.toml  README.md  SPLIT_DESIGN_ANALYSIS.md  SPLIT_SERVICE_ANALYSIS.md
crates/node/: CONFIG.md  Cargo.toml  config.example.yaml
crates/node/src/: config.rs  lib.rs  log_replay_writer.rs  main.rs  node.rs  pending_requests.rs  pilot_client.rs  router.rs  server.rs  snapshot_restore.rs  snapshot_service.rs  snapshot_transfer.rs  split_service.rs  state_machine.rs  sync_service.rs
crates/pilot/: Cargo.toml
crates/pilot/docs/: hybrid-storage-practical-solution.md  native-shard-storage-design.md  native-vs-application-sharding-comparison.md  shard-based-storage-architecture.md  shard-isolation-and-concurrency.md  shard-split-design-review.md  shard-split-design.md  shard-split-optimized-design.md
crates/pilot/src/: lib.rs  main.rs  storage.rs  watch.rs
crates/pilot/src/api/: http.rs  mod.rs
crates/pilot/src/metadata/: cluster.rs  mod.rs  node.rs  routing.rs  shard.rs
crates/pilot/src/node_manager/: mod.rs
crates/pilot/src/scheduler/: migration.rs  mod.rs  placement.rs  split.rs
crates/proto/: Cargo.toml  README.md  build.rs
crates/proto/proto/: node.proto  snapshot_service.proto  split_service.proto  sync_service.proto
crates/proto/src/: lib.rs
crates/raft/src/: cluster_config.rs  error.rs  event.rs  message.rs  multi_raft_driver.rs  pipeline.rs  traits.rs  types.rs
crates/raft/src/network/: mod.rs  pb.rs
crates/raft/src/state/: client.rs  config.rs  election.rs  leader_transfer.rs  mod.rs  read_index.rs  replication.rs  snapshot.rs
crates/raft/src/storage/log/: segment.rs
crates/raft/tests/: bootstrap_test.rs  cluster_learner_test.rs  cluster_test.rs  config_snapshot_test.rs  integration_tests.rs  mod.rs  network_inflight_test.rs  network_leader_election_test.rs  snapshot_test.rs
crates/raft/tests/common/: test_cluster.rs  test_node.rs  test_statemachine.rs
crates/raft/tests/mock/: mock_network.rs  mock_storage.rs
crates/redisstore/: Cargo.toml
crates/redisstore/src/: lib.rs  memory.rs  operation.rs  traits.rs
crates/resp/: Cargo.toml
crates/resp/src/: async_encoder.rs  async_parser.rs  encoder.rs  lib.rs  parser.rs
crates/resp/src/command/: error.rs  mod.rs  result.rs
crates/rr-core/: Cargo.toml
crates/rr-core/src/: lib.rs  routing.rs  shard.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  shard.rs  store.rs  traits.rs
crates/storage/src/cow/: mod.rs
crates/storage/src/hybrid/: bitmap.rs  list.rs  mod.rs  set.rs  shard_store.rs  sharded_rocksdb.rs  store.rs  stream_store.rs  zset.rs
crates/storage/src/hybrid/set/: tests.rs
crates/storage/src/memory/: bitmap.rs  list.rs  mod.rs  pubsub.rs  redis_impl.rs  set.rs  shard.rs  shard_data.rs  snapshot.rs  store.rs  zset.rs
crates/storage/src/rocksdb/: hash.rs  key_encoding.rs  mod.rs  sharded_rocksdb.rs  slot_rocksdb.rs  snapshot.rs  store.rs  string.rs
crates/storage/src/snapshot/: chunk.rs  mod.rs  segment.rs  wal.rs
crates/storage/src/store/: hash.rs  key.rs  list.rs  mod.rs  redis.rs  set.rs  snapshot.rs  string.rs  zset.rs
docs/: grpc-server-sharing-example.md  hybrid-storage-snapshot-challenges.md  multi-storage-snapshot-strategy.md  network-architecture-snapshot-analysis.md  rocksdb-column-family-sharding-evaluation.md  shard-aware-snapshot-mechanism.md  shard-split-comprehensive-summary.md  shard-split-design.md  shard-split-process-analysis.md  shard-split-snapshot-design.md  shard-split-solution-summary.md  snapshot-generation-strategies.md  snapshot-optimization-architecture.md  snapshot-storage-design.md  snapshot-transfer-design.md  storage-development-guide.md  storage-engine-snapshot-strategies.md
