[package]
name = "redraft"
version = "0.1.0"
edition = "2021"
description = "RedRaft - Redis-compatible distributed key-value store built on Raft consensus"
license = "MIT"

[lib]
name = "redraft"
path = "src/lib.rs"

[[bin]]
name = "redraft"
path = "src/main.rs"

[dependencies]
# Raft consensus library
raft = { path = "../raft" }
# RESP protocol support
resp = { path = "../resp" }
# Redis store state machine
storage = { path = "../storage" }

# Workspace dependencies
tokio = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
bincode = { workspace = true }
sha2 = { workspace = true }
uuid = { version = "1.10", features = ["v4", "serde"] }
zstd = "0.13.3"
crc32fast = { workspace = true }


# HTTP client for pilot communication
reqwest = { version = "0.12", features = ["json"] }

# Pilot types (for shared types like RaftGroupStatus)
pilot = { path = "../pilot" }

# CLI
clap = { version = "4.5", features = ["derive"] }
bytes.workspace = true

[build-dependencies]
tonic-prost-build = "0.14.2"

[dev-dependencies]
tempfile = "3.23.0"

