[package]
name = "pilot"
version = "0.1.0"
edition = "2021"
description = "Distributed control plane for raft-lite cluster"
license = "MIT"

[[bin]]
name = "pilot"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }

# HTTP API
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-build = "0.14"
