[package]
name = "redisstore"
version = "0.1.0"
edition = "2021"
description = "Redis-compatible key-value store state machine for Raft"
license = "MIT"

[dependencies]
# RESP protocol (for Command type)
resp = { path = "../resp" }
# Workspace dependencies
parking_lot = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bincode = { workspace = true }
tracing = { workspace = true }
