[package]
name = "resp"
version = "0.1.0"
edition = "2021"
description = "RESP (REdis Serialization Protocol) parser and encoder with async support"
license = "MIT"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["io-util", "net"] }
# Error handling
thiserror = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
