[package]
name = "resp"
version = "0.1.0"
edition = "2021"
description = "RESP (REdis Serialization Protocol) parser and encoder with async support"
license = "MIT"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["io-util", "net"] }
# Error handling
thiserror = { workspace = true }
# Serialization (for Command)
serde = { workspace = true, features = ["derive"] }
# Zero-copy byte buffer with serde support
bytes = { version = "1.5", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
